# dag

./: .gitignore  CMakeLists.txt  README.md  main.c  pytest.ini
cnpy/: CMakeLists.txt
examples/: CMakeLists.txt  bitarray_dag.c  numpy_dag.cpp  numpy_dag.py
include/: is_dag.h  is_dag_c.h
python/: setup.py
python/dag/: __init__.py
src/: CMakeLists.txt  graph_utils.c  is_dag.cpp
swig/: CMakeLists.txt  numpy_int_array.i  python_dag.i  python_dag_header.i  python_dag_ignore.i  python_dag_include.i  python_dag_typemaps.i
tests/cpp/: CMakeLists.txt  DAG_test.cpp
tests/cpp/data/: K4_cycles.npy  K4_nocycles.npy  big_cycle.npy  binary_tree.npy  binary_tree2.npy  disconnected_cycle.npy  graph_128_585.npy  graph_203_770.npy  graph_276_484.npy  graph_378_906.npy  graph_423_562.npy  graph_516_119.npy  graph_606_315.npy  graph_726_718.npy  graph_730_102.npy  graph_861_525.npy  not_a_tree.npy  simple_path.npy  tricycle.npy
tests/python/: test_dag.py
