CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
SET(CMAKE_BUILD_TYPE Release)
PROJECT(dag LANGUAGES CXX C)
SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(Python3 REQUIRED COMPONENTS Interpreter Development NumPy)

FIND_PACKAGE(ZLIB REQUIRED)

SET_SOURCE_FILES_PROPERTIES(
        ${CMAKE_SOURCE_DIR}/swig/python_dag.i
        PROPERTIES
        CPLUSPLUS ON
        )

SET(
        INCLUDE_DIRS
        ${Python3_INCLUDE_DIRS}
        ${Python3_NumPy_INCLUDE_DIRS}
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/cnpy/include
        )

INCLUDE_DIRECTORIES("${INCLUDE_DIRS}")

SET(
        CNPY_LINK_LIBRARIES
        ${ZLIB_LIBRARIES}
        )

SET(
        LIBDAG_LINK_LIBRARIES
        cnpy
        )

SET(DAG_LINK_LIBRARIES
    libdag libgraph_utils
    )

SET(NUMPY_DAG_LINK_LIBRARIES
    ${LIBDAG_LINK_LIBRARIES}
    libdag
    )

SET(PYTHON_LIBDAG_LINK_LIBRARIES libdag ${Python3_LIBRARIES} ${LIBDAG_LINK_LIBRARIES})

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cnpy)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/swig)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/examples)
