CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
SET(CMAKE_BUILD_TYPE Release)
PROJECT(dag LANGUAGES CXX C)
SET(CMAKE_CXX_STANDARD 17)

SET(BUILD_PYTHON_BINDINGS OFF CACHE BOOL "Build Python bindings")

FIND_PACKAGE(ZLIB REQUIRED)

SET(
        INCLUDE_DIRS
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/cnpy/include
        )

SET(
        CNPY_LINK_LIBRARIES
        ${ZLIB_LIBRARIES}
        )

SET(
        LIBDAG_LINK_LIBRARIES
        cnpy
        )

SET(DAG_LINK_LIBRARIES
    libdag libgraph_utils
    )

SET(NUMPY_DAG_LINK_LIBRARIES
    ${LIBDAG_LINK_LIBRARIES}
    libdag
    )

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cnpy)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)

IF (${BUILD_PYTHON_BINDINGS})
    SET(PYTHON_LIBDAG_LINK_LIBRARIES libdag ${Python3_LIBRARIES} ${LIBDAG_LINK_LIBRARIES})
    ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/swig)
ENDIF (${BUILD_PYTHON_BINDINGS})

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/examples)
