CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
SET(CMAKE_BUILD_TYPE Release)
PROJECT(dag LANGUAGES CXX C)
SET(CMAKE_CXX_STANDARD 17)


INCLUDE(FetchContent)
FETCHCONTENT_DECLARE(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
        )
FETCHCONTENT_MAKEAVAILABLE(googletest)

ENABLE_TESTING()

SET(BUILD_PYTHON_BINDINGS OFF CACHE BOOL "Build Python bindings")

SET(GENERATE_DOCS OFF CACHE BOOL "Generate documentation")

FIND_PACKAGE(ZLIB REQUIRED)

SET(
        INCLUDE_DIRS
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/cnpy/include
        )

SET(
        CNPY_LINK_LIBRARIES
        ${ZLIB_LIBRARIES}
        )

SET(
        LIBDAG_LINK_LIBRARIES
        cnpy
        )

SET(DAG_LINK_LIBRARIES
    libdag libgraph_utils
    )

SET(NUMPY_DAG_LINK_LIBRARIES
    ${LIBDAG_LINK_LIBRARIES}
    libdag
    )

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cnpy)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)

IF (${BUILD_PYTHON_BINDINGS})
    SET(PYTHON_LIBDAG_LINK_LIBRARIES libdag ${Python3_LIBRARIES} ${LIBDAG_LINK_LIBRARIES})
    ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/swig)
ENDIF (${BUILD_PYTHON_BINDINGS})

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/examples)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tests/cpp)

IF (${GENERATE_DOCS})
    #Make sure sure Doxygen is installed for building documentation
    FIND_PACKAGE(Doxygen REQUIRED)

    SET(DOXYGEN_PROJECT_NAME DAG)
    SET(DOXYGEN_EXTRACT_PRIVATE YES)
    SET(DOXYGEN_FULL_PATH_NAMES NO)
    SET(DOXYGEN_ENABLE_PREPROCESSING NO)
    SET(DOXYGEN_STRIP_CODE_COMMENTS YES)
    SET(DOXYGEN_COMPACT_LATEX YES)
    SET(DOXYGEN_EXTRACT_PRIVATE YES)
    SET(DOXYGEN_GENERATE_DOCBOOK YES)
    SET(DOXYGEN_GENERATE_LATEX YES)
    SET(DOXYGEN_SHOW_FILES NO)
    SET(DOXYGEN_USE_PDFLATEX YES)
    SET(DOXYGEN_FULL_PATH_NAMES NO)
    SET(DOXYGEN_GENERATE_XML TRUE)
    SET(DOXYGEN_USE_MATHJAX YES)
    SET(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/docs)
    LIST(APPEND DAG_DOCUMENTATION_INPUT_FILES
         ${CMAKE_SOURCE_DIR}/include/is_dag.h
         )
    DOXYGEN_ADD_DOCS(
            DAG_docs
            ${DAG_DOCUMENTATION_INPUT_FILES}
            )
    SET(DOCUMENTATION_ARGS "Doxyfile.DAG_docs")
    ADD_CUSTOM_TARGET(docs
                      COMMAND ${DOXYGEN_EXECUTABLE} ${DOCUMENTATION_ARGS}
                      )
ENDIF (${GENERATE_DOCS})

